# ecc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD.bazel  CLAUDE.md  CMakeLists.txt  MODULE.bazel  README.cn.md  README.en.md  README.md  build.sh  build_gui.sh  chipcompiler.spec  flake.nix  pyproject.toml
bazel/scripts/: BUILD.bazel  build-dreamplace-wheel.sh  build-wheel.sh  install-dreamplace.sh  prepare-dev.sh
chipcompiler/: BUILD.bazel  __init__.py
chipcompiler/analysis/: step.py
chipcompiler/cli/: __init__.py  main.py
chipcompiler/data/: __init__.py  home.py  parameter.py  pdk.py  step.py  workspace.py
chipcompiler/engine/: __init__.py  db.py  flow.py
chipcompiler/gui/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
chipcompiler/gui/public/data/ics55_00001/: flow.json  parameters.json
chipcompiler/gui/public/data/ics55_00001/CTS_iEDA/config/: db_default_config.json  flow_config.json  rt_default_config.json  to_default_config_hold.json
chipcompiler/gui/public/data/ics55_00001/CTS_iEDA/feature/: CTS.db.json  CTS.map.json  CTS.step.json
chipcompiler/gui/public/data/ics55_00001/CTS_iEDA/output/: gcd_CTS.gds  gcd_CTS.v
chipcompiler/gui/public/data/ics55_00001/CTS_iEDA/report/: CTS.db.rpt
chipcompiler/gui/public/data/ics55_00001/Floorplan_iEDA/config/: db_default_config.json  flow_config.json  no_default_config_fixfanout.json  rt_default_config.json
chipcompiler/gui/public/data/ics55_00001/Floorplan_iEDA/feature/: Floorplan.db.json
chipcompiler/gui/public/data/ics55_00001/Floorplan_iEDA/output/: gcd_Floorplan.gds  gcd_Floorplan.v
chipcompiler/gui/public/data/ics55_00001/Synthesis_yosys/data/: global_var.tcl
chipcompiler/gui/public/data/ics55_00001/Synthesis_yosys/output/: gcd_Synthesis.v
chipcompiler/gui/public/data/ics55_00001/Synthesis_yosys/report/: Synthesis_check.rpt  Synthesis_stat.json
chipcompiler/gui/public/data/ics55_00001/Synthesis_yosys/script/: init_tech.tcl  yosys_synthesis.tcl
chipcompiler/gui/public/data/ics55_00001/drc_iEDA/config/: db_default_config.json  flow_config.json  pl_default_config.json  rt_default_config.json
chipcompiler/gui/public/data/ics55_00001/drc_iEDA/feature/: drc.db.json  drc.json  drc.step.json
chipcompiler/gui/public/data/ics55_00001/drc_iEDA/output/: gcd_drc.gds  gcd_drc.v
chipcompiler/gui/public/data/ics55_00001/drc_iEDA/report/: drc.db.rpt
chipcompiler/gui/public/data/ics55_00001/filler_iEDA/config/: db_default_config.json  flow_config.json  rt_default_config.json
chipcompiler/gui/public/data/ics55_00001/filler_iEDA/feature/: filler.db.json  filler.step.json
chipcompiler/gui/public/data/ics55_00001/log/: gcd.2026-01-08_17-46-42
chipcompiler/gui/public/data/ics55_00001/origin/: gcd.sdc
chipcompiler/gui/python/: bridge.py  flow.py  test.py
chipcompiler/gui/src/: App.vue  main.ts  tauri.d.ts
chipcompiler/gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
chipcompiler/gui/src-tauri/binaries/: .gitkeep
chipcompiler/gui/src-tauri/capabilities/: migrated.json
chipcompiler/gui/src-tauri/src/: main.rs
chipcompiler/gui/src/api/: client.ts  flow.ts  index.ts  project.ts  sse.ts  type.ts  workspace.ts
chipcompiler/gui/src/applications/editor/: EditorContainer.vue
chipcompiler/gui/src/applications/editor/core/: Editor.ts  Theme.ts
chipcompiler/gui/src/applications/editor/plugins/: RulerPlugin.ts
chipcompiler/gui/src/components/: AIChatPanel.vue  ChatInspectorPanel.vue  DrawingArea.vue  DrawingToolbar.vue  InspectorPanel.vue  LeftSidebar.vue  MessageItem.vue  NewProjectWizard.vue  RightPanel.vue  RightSidebar.vue  ThumbnailGallery.vue  TopBar.vue  WelcomePage.vue
chipcompiler/gui/src/composables/: useCurrentStage.ts  useFlowRunner.ts  useFlowStages.ts  useHomeData.ts  useMenuEvents.ts  useParameters.ts  useProject.ts  useSubflow.ts  useTauri.ts  useWorkspace.ts
chipcompiler/gui/src/router/: index.ts
chipcompiler/gui/src/stores/: messageStore.ts  themeStore.ts
chipcompiler/gui/src/styles/: index.css
chipcompiler/gui/src/types/: index.ts
chipcompiler/gui/src/views/: ConfigureView.vue  EditorView.vue  HomeView.vue  WelcomeView.vue  WorkspaceView.vue
chipcompiler/rtl2gds/: builder.py
chipcompiler/server/: __init__.py  run_server.py  runtime_log.py
chipcompiler/server/routers/: ecc.py
chipcompiler/server/schemas/: ecc.py  info.py
chipcompiler/server/services/: __init__.py  ecc.py
chipcompiler/server/sse/: notify_service.py
chipcompiler/services/: __init__.py  api-server.spec  main.py
chipcompiler/services/routers/: __init__.py  ecc.py
chipcompiler/services/schemas/: ecc.py  info.py
chipcompiler/services/services/: ecc.py
chipcompiler/services/sse/: models.py
chipcompiler/tools/: __init__.py  eda.py
chipcompiler/tools/ecc/: __init__.py  builder.py  checklist.py  metrics.py  module.py  plot.py  runner.py  service.py  subflow.py  utility.py
chipcompiler/tools/ecc/configs/: cts_default_config.json  db_default_config.json  drc_default_config.json  flow_config.json  no_default_config_fixfanout.json  pl_default_config.json  pnp_default_config.json  rt_default_config.json  to_default_config_drv.json  to_default_config_hold.json  to_default_config_setup.json
chipcompiler/tools/ecc_dreamplace/: __init__.py  builder.py  metrics.py  module.py  run_dreamplace.py  runner.py  service.py  utility.py
chipcompiler/tools/ecc_dreamplace/configs/: dreamplace.json
chipcompiler/tools/iEDA/: __init__.py  builder.py  engine.py  metrics.py  module.py  plot.py  runner.py
chipcompiler/tools/klayout/: __init__.py  module.py  runner.py  utility.py
chipcompiler/tools/klayout_tool/: __init__.py  builder.py  module.py  runner.py
chipcompiler/tools/utility/: __init__.py  update.py
chipcompiler/tools/yosys/: __init__.py  builder.py  checklist.py  matrics.py  metrics.py  runner.py  service.py  subflow.py  utility.py
chipcompiler/tools/yosys/scripts/: global_var.tcl
chipcompiler/utility/: __init__.py  csv.py  file.py  filelist.py  json.py  log.py  plot.py
(+312 files in other folders)
