[project]
name = "chipcompiler"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "pyjson5>=1.6.0",
    "pyyaml>=6.0",
    "klayout==0.30.2",
    "tqdm>=4.67.1",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.9",
    "ruff>=0.14.10",
    "pyinstaller==6.17.0",
    "pyright>=1.1.407",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pyinstaller>=6.0.0",
    "prek>=0.2.20"
]

[build-system]
requires = ["uv_build>=0.8.5,<0.10.0"]
build-backend = "uv_build"
[tool.uv.build-backend]
module-name = ["chipcompiler"]
module-root = ""
source-exclude = ["scripts/*"]

[project.scripts]
chipcompiler = "chipcompiler.services.run_server:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["chipcompiler/**/*.py", "tests/**/*.py"]
