[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.8.5" ]

[project]
name = "ecc"
version = "0.1.0"
readme = "README.md"
authors = [
  { name = "Emin", email = "me@emin.chat" },
  { name = "KoEkko", email = "225193046@qq.com" },
  { name = "Yell-walkalone", email = "12112088@qq.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fastapi>=0.109",
  "klayout>=0.30.2",
  "matplotlib>=3.4",
  "numpy>=1.21",
  "pandas>=1.3",
  "pip>=25.0.1",
  "pydantic>=2.5",
  "pyjson5>=1.6",
  "pyyaml>=6",
  "scipy>=1.7",
  "tqdm>=4.67.1",
  "uvicorn>=0.27",
]
scripts.cli = "chipcompiler.cli.main:main"

[dependency-groups]
dev = [
  "auditwheel>=6",
  "black>=23",
  "mypy>=1",
  "prek>=0.2.20",
  "pyinstaller==6.17",
  "pyinstaller>=6",
  "pyright>=1.1.407",
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.14.10",
  "ty>=0.0.9"
]

[project.optional-dependencies]
dreamplace = ["dreamplace"]

[tool.uv]
constraint-dependencies = [
  "llvmlite>=0.40.0",
  "numba>=0.57.0",
]
build-backend.module-name = [ "chipcompiler" ]
build-backend.module-root = ""
build-backend.source-exclude = [
  "/scripts/**",
  "chipcompiler/thirdparty/ecc-tools/src/third_party/BST-DME/**"
]
build-backend.wheel-exclude = [
  "chipcompiler/thirdparty/**",
]

[tool.uv.workspace]
members = ["chipcompiler/thirdparty/ecc-dreamplace"]

[tool.uv.sources]
dreamplace = { workspace = true }

[tool.ruff]
line-length = 100
lint.select = [
  "B",   # flake8-bugbear
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
]
extend-include = ["*.spec"]

[tool.ty]
environment.python-version = "3.11"
src.include = [ "chipcompiler/**/*.py", "tests/**/*.py" ]
