load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])


sh_binary(
    name = "prepare_dev",
    srcs = ["prepare-dev.sh"],
    data = [
        "install-dreamplace.sh",
        "//chipcompiler/thirdparty:ecc_bundle",
        "//chipcompiler/thirdparty:dreamplace_cmake",
    ],
    args = [
        "$(rlocationpath //chipcompiler/thirdparty:ecc_bundle)",
        "$(locations //chipcompiler/thirdparty:dreamplace_cmake)",
    ],
)

sh_binary(
    name = "build_wheel",
    srcs = ["build-wheel.sh"],
    data = [
        "//:raw_wheel",
        "@python_3_11//:python3",
    ],
    args = [
        "$(rlocationpath //:raw_wheel)",
        "$(rlocationpath @python_3_11//:python3)",
    ],
)

sh_binary(
    name = "install_dreamplace",
    srcs = ["install-dreamplace.sh"],
    data = [
        "//chipcompiler/thirdparty:dreamplace_cmake",
    ],
    args = [
        "$(locations //chipcompiler/thirdparty:dreamplace_cmake)",
    ],
)

sh_binary(
    name = "clean_dreamplace",
    srcs = ["install-dreamplace.sh"],
    args = ["--clean"],
)
