[package]
name = "ecc-client"
version = "0.1.0"
description = "ECC"
authors = ["Ekko"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-set-resizable", "window-set-title", "protocol-asset", "window-start-dragging", "window-unmaximize", "window-show", "window-minimize", "window-maximize", "window-hide", "window-unminimize", "window-close", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# 性能优化配置
[profile.dev]
opt-level = 1  # 开发时启用基本优化

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'  # 优化二进制大小和性能
strip = true     # 移除调试符号

